# Gpufit

./: .cproject  .gitignore  .project  CMakeLists.txt  LICENSE.txt  README.md  debug.py
.github/workflows/: c-cpp.yml  ci.yml
.metadata/: version.ini
Cpufit/: CMakeLists.txt  Cpufit.def  README.md  cpufit.cpp  cpufit.h  info.cpp  info.h  interface.cpp  interface.h  lm_fit.cpp  lm_fit.h  lm_fit_cpp.cpp  profile.cpp  profile.h
Cpufit/matlab/: CMakeLists.txt  README.md  cpufit.m
Cpufit/matlab/examples/: gauss2d.m  gauss2d_plot.m
Cpufit/matlab/mex/: CpufitMex.cpp
Cpufit/python/: CMakeLists.txt  README.txt  requirements.txt  setup.py
Cpufit/python/dirty_code/: cpufit.py  executing_cpufit.py  executing_cpufit_plot.py
Cpufit/python/pycpufit/: __init__.py  cpufit.py  version.py
Cpufit/python/tests/: run_tests.py  test_gaussian_fit_1d.py  test_linear_regression.py
Gpufit/: CMakeLists.txt  Gpufit.def  cauchy_2d_elliptic.cuh  constants.h  constants_OLD.h  constants_UNMODIFIED.h  cuda_gaussjordan.cu  cuda_gaussjordan.cuh  cuda_kernels.cu  cuda_kernels.cuh  definitions.h  estimators.cuh  gauss_1d.cuh  gauss_2d.cuh  gauss_2d_elliptic.cuh  gauss_2d_rotated.cuh  gpu_data.cu  gpu_data.cuh  gpufit.cpp  gpufit.h  info.cpp  info.cu  info.h  interface.cpp  interface.h  linear_1d.cuh  lm_fit.cpp  lm_fit.h  lm_fit_cuda.cpp  lm_fit_cuda.cu  lse.cuh  mle.cuh  models.cuh
Gpufit/estimators/: estimators.cuh  lse.cuh  mle.cuh
Gpufit/examples/: 2CXM_Fitting.cpp  2CXM_fitting.cpp  CMakeLists.txt  CUDA_Interface_Example.cu  Dixon_Fitting.cpp  Double_Exp_Example.cpp  Gauss_Fit_2D_Example.cpp  KineticModel_fitExample.cpp  KineticModel_fitExample_withFittingOutput.cpp  Linear_Regression_Example.cpp  Patlak_fitting.cpp  Simple_Example.cpp  TestWork.cpp  Tissue_Uptake_Fitting.cpp  Tofts_Extended_Fitting.cpp  Tofts_Fitting.cpp  Tofts_fitting.cpp
Gpufit/java/: CMakeLists.txt  README.txt
Gpufit/java/adapter/: CMakeLists.txt  com_github_gpufit_Gpufit.cpp  com_github_gpufit_Gpufit.h
Gpufit/java/gpufit/: build.gradle  gradle.properties  settings.gradle
Gpufit/java/gpufit/gradle/wrapper/: gradle-wrapper.properties
Gpufit/java/gpufit/src/main/java/com/github/gpufit/: CudaVersion.java  Estimator.java  FitModel.java  FitResult.java  FitResults.java  FitState.java  Gpufit.java  GpufitUtils.java  Model.java  RunIt.java  package-info.java
Gpufit/java/gpufit/src/test/java/com/github/gpufit/examples/: Gauss2DExample.java  SimpleExample.java  package-info.java
Gpufit/matlab/: CMakeLists.txt  ConstraintType.m  EstimatorID.m  ModelID.m  README.txt  gpufit.m  gpufit.m:Zone.Identifier  gpufit_constrained.m  gpufit_constraints.m  gpufit_cuda_available.m  gpufit_version.m
Gpufit/matlab/examples/: gauss1d.m  gauss2d.m  gauss2d_comparison.m  gauss2d_constrained.m  gauss2d_fixed_parameters.m  gauss2d_plot.m  gaussian_peak_2d.m  simple.m  splinefit_1d.m  splinefit_2d.m  splinefit_3d.m  splinefit_3d_multichannel.m
Gpufit/matlab/matlab/: gaussian_peak_1d.m  splinefit_1d.m
Gpufit/matlab/mex/: GpufitConstrainedMex.cpp  GpufitConstraintsMex.cpp  GpufitCudaAvailableMex.cpp  GpufitMex.cpp
Gpufit/matlab/tests/: gauss_fit_1d_test.m  run_tests.m
Gpufit/models/: bicompartment_3expIF_3k.cuh  bicompartment_3expIF_3k_BKP.cuh  biexp.cuh  biexpred.cuh  brown_dennis.cuh  cauchy_2d_elliptic.cuh  dipBiProjY_1_2d.cuh  dipBiProjY_2_2d.cuh  dipBiProjY_3_2d.cuh  dipProj111YZ_1_2d.cuh  dipProj111u4_Pu4_1_2d.cuh  dipProj111u4_Pu4_2_2d.cuh  dipProj111u4_Pu4_3_2d.cuh  dipProj111u4_Pz_1_2d.cuh  dipProj111u4_Pz_2_2d.cuh  dipProj111u4_Pz_3_2d.cuh  dual_exp.cuh  esr2111.cuh  esr3111.cuh  exp_4_param.cuh  exponential.cuh  fletcher_powell_helix.cuh  gauss_1d.cuh  gauss_2d.cuh  gauss_2d_elliptic.cuh  gauss_2d_rotated.cuh  linear_1d.cuh  liver_fat_four.cuh  liver_fat_three.cuh  liver_fat_two.cuh  models.cuh  models_OLD.cuh  models_UNMODIFIED.cuh  monoexp.cuh  monoexpred.cuh  new_model.cuh  patlak.cuh  ramsey_var_p.cuh  spline_1d.cuh  spline_2d.cuh  (+12 more)
Gpufit/python/: CMakeLists.txt  README.txt  setup.py  setup_linux.py
Gpufit/python/examples/: gauss2d.py  gauss2d_plot.py  misc.py  pyDixon_Timing.py  simple.py  splinefit_1d.py  splinefit_2d.py  splinefit_3d.py  splinefit_3d_multi_channel.py
Gpufit/python/pyGpufit.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
Gpufit/python/pygpufit/: gpufit.py  gpufit_OLD.py  version.py
Gpufit/python/tests/: constraints_testing.ipynb  run_tests.py  test_gaussian_fit_1d.py  test_linear_regression.py
Gpufit/tests/: Brown_Dennis_Fit.cpp  CMakeLists.txt  Cauchy_Fit_2D_Elliptic.cpp  Error_Handling.cpp  Fletcher_Powell_Helix_Fit.cpp  Gauss_Fit_1D.cpp  Gauss_Fit_1D_simulTest.cpp  Gauss_Fit_2D.cpp  Gauss_Fit_2D_Elliptic.cpp  Gauss_Fit_2D_Rotated.cpp  Gauss_Fit_2D_simulTest.cpp  Linear_Fit_1D.cpp  Patlak.cpp  test_all.sh
docs/: appendix.rst  bindings.rst  conf.py  customization.rst  epilog.txt  examples.rst  fit_estimator_functions.rst  fit_model_functions.rst  gpufit_api.rst  index.rst  installation.rst  introduction.rst  license.rst  make.bat
docs/_static/: style.css
docs/images/: algorithm_gpufit_flowchart.vsdx
examples/: CMakeLists.txt  Gpufit_Cpufit_Nvidia_Profiler_Test.cpp  Gpufit_Cpufit_Performance_Comparison.cpp  Gpufit_Cpufit_Performance_Comparison_readme.txt  Gpufit_Cpufit_Profiling.cpp
examples/c++/: 2CXM_Fitting.cpp  CMakeLists.txt  CUDA_Interface_Example.cu  Dixon_Fitting.cpp  Exponential_Fitting.cpp  Gauss_Fit_2D_Example.cpp  Linear_Regression_Example.cpp  Patlak_Fitting.cpp  Simple_Example.cpp  Tissue_Uptake_Fitting.cpp  Tofts_Extended_Fitting.cpp  Tofts_Fitting.cpp
examples/c++/gpu_vs_cpu_profiling/: CMakeLists.txt  Gpufit_Cpufit_Patlak.cpp  Patlak_Fitting_Comparison.cpp
examples/matlab/: gauss1d.m  gauss2d.m  gauss2d_comparison.m  gauss2d_constrained.m  gauss2d_fixed_parameters.m  gauss2d_plot.m  gaussian_peak_2d_rotated.m  (+4 more)
package/: README.md  control  create_package.bat  create_package.sh  create_package_cublas.bat  documentation_create_latex.bat  install_gpufit_python.sh  sdk_readme.txt
tests/: CMakeLists.txt  Consistency.cpp  utils.cpp  utils.h
(+19 files in other folders)
